--- a/package.json
+++ b/package.json
@@ -85,7 +85,8 @@
     "reassure": "^0.4.1",
     "semver": "5.x.x",
     "shell-utils": "1.x.x",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "react-native-safe-area-context": "^4.10.8"
   },
   "optionalDependencies": {
     "moment": "^2.29.4"
