--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
     "example/src/screens/calendarScreen.tsx",
     "example/src/screens/expandableCalendarScreen.tsx",
     "example/src/screens/agendaScreen.tsx",
+    "example/src/screens/safeAreaAgendaScreen.tsx",
     "example/src/screens/timelineCalendarScreen.tsx",
     "example/src/screens/calendarListScreen.tsx",
     "example/src/screens/newCalendarListScreen.tsx"
